fix: logo is shifted on mobile

--- a/style/styles.css
+++ b/style/styles.css
@@ -582,6 +582,7 @@ footer .logo {
 	}
 	.logo-text {
 		font-size: 32px;
+		margin-bottom: 8px;
 	}
 }
 
